# FinIQ-

./: README.md
project3.1/: main.py  pyproject.toml
project3.1/activate/: pyvenv.cfg
project3.1/activate/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
