[project]
name = "project3-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "streamlit-aggrid>=1.1.8.post1",
    "streamlit-card>=1.0.2",
    "streamlit-elements>=0.1.0",
    "streamlit-option-menu>=0.4.0",
]
